--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
   "DatabaseType": "postgres",
-  "DatabaseConnectionString": "host=localhost port=5432 user=postgres password=dev database=synapse sslmode=disable"
+  "DatabaseConnectionString": "host=localhost port=5432 user=synapse_user password=changeme database=synapse sslmode=disable"
 }
