--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+  "MatrixURL": "http://localhost:8080",
+  "MatrixAdminToken": "changeme",
   "DatabaseType": "postgres",
   "DatabaseConnectionString": "host=localhost port=5432 user=synapse_user password=changeme database=synapse sslmode=disable"
 }
