Run as postrges user so it has access to the DB 💀

--- a/deployment/matrix-disk-space-janitor.service
+++ b/deployment/matrix-disk-space-janitor.service
@@ -19,8 +19,8 @@ WorkingDirectory=/opt/matrix-diskspace-janitor
 
 ExecStart=/opt/matrix-diskspace-janitor/janitor
 
-User=caddy
-Group=caddy
+User=postgres
+Group=postgres
 
 [Install]
 WantedBy=multi-user.target
